fix Feature section mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -132,11 +132,26 @@ p {
 
 .features-grid {
   display: grid;
-  grid-template-columns: 1fr 3fr;
-  justify-items: start;
+  grid-template-columns: 1fr;
+}
+
+.feature-item {
+  display: flex;
   align-items: center;
 }
 
 .feature-texto {
   text-align: center;
+  width: 100%;
+  padding-left: 3.5rem;
+}
+
+.feature-texto p {
+  margin-block: 1rem;
+}
+
+@media (min-width: 768px) {
+  .features-grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
